[package]
name = "intreview-questions"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "hourglass"
path = "./src/bin/hourglass.rs"

[[bin]]
name = "rot_left"
path = "./src/bin/rot_left.rs"

[dependencies]
