[package]
name = "intreview-questions"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "hourglass"
path = "./src/bin/hourglass.rs"

[[bin]]
name = "rot_left"
path = "./src/bin/rot_left.rs"

[[bin]]
name = "ny_chaos"
path = "./src/bin/ny_chaos.rs"

[[bin]]
name = "unique_string"
path = "./src/bin/unique_string.rs"

[[bin]]
name = "balanced_parentheses_checker"
path = "./src/bin/balanced_parentheses_checker.rs"

[[bin]]
name = "longest_valid_parentheses"
path = "./src/bin/longest_valid_parentheses.rs"

[[bin]]
name = "quicksort-retrieval1"
path = "./src/bin/quicksort-retrieval1.rs"

[[bin]]
name = "minimum-remove-to-make-valid-parentheses"
path = "./src/bin/minimum-remove-to-make-valid-parentheses.rs"

[[bin]]
name = "kth_largest_element_in_an_array"
path = "./src/bin/kth_largest_element_in_an_array.rs"

[[bin]]
name = "merge_k_lists"
path = "./src/bin/merge_k_lists.rs"

[[bin]]
name = "number_to_words"
path = "./src/bin/number_to_words.rs"

[[bin]]
name = "maximum_number_of_ways_to_partition_an_array"
path = "./src/bin/maximum_number_of_ways_to_partition_an_array.rs"


[[bin]]
name = "calculator"
path = "./src/bin/calculator.rs"

[[bin]]
name = "calculator-retrieve"
path = "./src/bin/calculator-retrieve.rs"

[[bin]]
name = "calculate_execution_times"
path = "./src/bin/calculate_execution_times.rs"

[[bin]]
name = "problem_name"
path = "./src/bin/problem_name.rs"

[dependencies]
chrono = "0.4.39"
convert_case = "0.7.1"
leetcode = "0.1.4"
rand = "0.8.5"
